--- a/sparta/prac.html
+++ b/sparta/prac.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스파르타코딩클럽 | HTML 기초</title>
+    <style>
+        h1 {
+            color: red;
+        }
+
+        .box {
+            background-color: green;
+            color: white;
+
+            width: 800px;
+            height: 800px;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .first {
+            background-color: red;
+
+            width: 300px;
+            height: 200px;
+
+            margin-bottom: 20px;
+        }
+
+        .second {
+            background-color: blue;
+            width: 200px;
+            height: 200px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="box">
+        <div class = 'first'>첫 번째 구역</div>
+        <div class = 'second'>두 번째 구역</div>
+    </div>
     <!-- 구역을 나누는 태그들 -->
     <div>나는 구역을 나누죠</div>
     <p>나는 문단이에요</p>
